--- a/css/index.css
+++ b/css/index.css
@@ -5,15 +5,21 @@
     /************** Colors **************/
         --bgc-primary: 0, 0%, 11%;
         --bgc-secondary: 0, 0%, 96%;
-        
-        --border-clr: 216, 12%, 84%;
-    
+        --bgc-accent-1: 238, 99%, 67%;/* blue */
+        --bgc-accent-2: 331, 96%, 60%;/* pink */
+
+        --border-clr-light: 0, 0%, 96%;
+        --border-clr-dark: 0, 0%, 11%;
+        --border-clr-accent-1: 238, 99%, 67%;/* blue */
+        --border-clr-accent-2: 331, 96%, 60%;/* pink */
+
+        --grad-clr-1: 238, 99%, 67%;/* blue */
+        --grad-clr-2: 331, 96%, 60%;/* pink */
+
         --fc-top: 0, 0%, 96%;
-        --fc-search: 220, 9%, 46%;
+        --fc-bottom: 0, 0%, 31%;
+        --fc-search-bgc: 316, 100%, 90%;
         --fc-searchText: 217, 19%, 27%;
-        --fc-body: 218, 11%, 65%;
-        --fc-icon: 0, 3%, 87%;
-        --fc-heading: 221, 39%, 11%;
     /************** Fonts **************/
         --ff-primary: 'Inter', sans-serif;
     
@@ -40,8 +46,8 @@ p {
     margin: 0;
 }
 body{
-    color: white;
-    background-color: rgb(51, 51, 51);
+    color: hsl(var(--fc-top));
+    background-color: hsl(var(--bgc-primary));
     font-family: var(--ff-primary);
     display: flex;
     justify-content: center;
@@ -49,37 +55,70 @@ body{
     height: 100vh;
 }
 .container {
-    width: 550px;
-    min-width: 360px;
+    width: 50vw;
+    min-width: 18rem;
     margin: 0 auto;
     text-align: center;
     box-shadow: 0 2px 3px black;
 }
 .top_container {
-    background: linear-gradient(to left, #585DFE, #FB3796);
+    background: linear-gradient(to left, hsl(var(--grad-clr-1)), hsl(var(--grad-clr-2)));
     height: 260px;
     display: grid;
     place-items: center;
 }
 .bottom_container {
-    background-color: #f5f5f5;
-    color: #4E4E4E;
-    height: 290px;
+    background-color: hsl(var(--bgc-secondary));
+    color: hsl(var(--fc-bottom));
     display: grid;
     place-items: center;
     padding: 3rem;
 }
 .bottom_container h4{
-    font-weight: 800;
+    font-weight: var(--fw-black);
 }
 .bottom_container p{
-    font-size: 14px;
-    font-weight: 400;
+    font-size: var(--fs-normal);
+    font-weight: var(--fw-normal);
     line-height: 20px;
 }
 .value_el {
-    font-size: 97.57px;
-    font-weight: var(--fw-black);
-    line-height: 1;
     margin-top: 2rem;
+    display: grid;
+    place-items: center;
+}
+#valueInput {
+    border: none;
+    padding: .5rem 0;
+    margin-bottom: 1rem;
+    border-radius: .2rem;
+    width: 5rem;
+    aspect-ratio: 1/1;
+    font-size: 3rem;
+    text-align: center;
+    color: hsl(var(--fc-searchText));
+}
+#valueInput:focus {
+    outline: 2px solid hsl(var(--border-clr-dark));
+    background-color: hsl(var(--fc-search-bgc));
+}
+#convertBtn{
+    width: 5rem;
+    border: 1px solid hsl(var(--border-clr-accent-1));
+    padding: .5rem;
+    border-radius: .2rem;
+    background-color: hsl(var(--bgc-accent-1));
+    color: hsl(var(--fc-top));
+    font-size: var(--fs-medium);
+    font-family: var(--ff-primary);
+}
+#convertBtn:hover {
+    background-color: hsl(var(--bgc-accent-2));
+    border: 1px solid hsl(var(--border-clr-light));  
+    cursor: pointer;
+}
+#convertBtn:focus {
+    background-color: hsl(var(--bgc-accent-2));
+    border: 1px solid hsl(var(--border-clr-light)); 
+    outline: 2px solid hsl(var(--border-clr-accent-2));
 }
